tests/fixtures/stl/errors/test_mutual_recursive_record.stl
// Mutually recursive records (A references B references A) expand forever once
// inlined, just like direct self-reference; the diagnostic should name the cycle.
// expect-error: Recursive record definition
record A {
  is {
    b is B;
  }
}

record B {
  is {
    a is A;
  }
}

prompt test {
  is {
    node is A;
  }
}

export test as main;
